--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <resources>
     <string name="app_name">MyFirstKotlin</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="go_to">Перейти</string>
+    <!-- Strings used for Movie Details -->
+    <string name="movie_details_back">Back</string>
+    <string name="movie_details_age_default">13+</string>
+    <string name="movie_details_title">Avengers:\nEnd Game</string>
+    <string name="movie_details_genres">Action, Adventure, Fantasy</string>
+    <string name="movie_details_reviews">125 Reviews</string>
+    <string name="movie_details_storyline">Storyline</string>
+    <string name="movie_details__description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
+    <string name="movie_details_cast">Cast</string>
+    <string name="downey_jr">Robert Downey Jr.</string>
+    <string name="evans">Chris Evans</string>
+    <string name="ruffalo">Mark Ruffalo</string>
+    <string name="hemsworth">Chris Hemsworth</string>
+    <string name="image_actor_of_content_description">image actor</string>
+    <string name="image_background_of_content_description">image background</string>
 </resources>
